[package]
name = "vatsim-parser"
authors = [
        "Robin Gloster <mail@glob.in>",
        "Franz Pletz <fpletz@fnordicwalking.de>",
        "Alex Legler",
]
version = "0.1.0"
edition = "2021"
description = "Parser for a variety of vatsim-related file formats"
repository = "https://github.com/blip-radar/vatsim-parser"
license = "LGPL-3.0-or-later"

[dependencies]
bevy_derive = "0.15"
bevy_reflect = "0.15"
encoding_rs = "0.8.35"
from-pest = "0.3.3"
fs-err = "3.0.0"
geo = { version = "0.29", features = ["use-serde"] }
multimap = "0.10.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
once_cell = "1.20.0"
pest = "2.7.15"
pest-ast = "0.3.5"
pest_derive = "2.7.15"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.10"
tracing = "0.1.41"
uom = { version = "0.36", features = ["serde"] }

[dev-dependencies]
geojson = { version = "0.24", features = ["geo-types"] }
pretty_assertions_sorted = "1.0.0"
tracing-subscriber = "0.3.19"

[lints.clippy]
# TODO fix
result_large_err = "allow"
large_enum_variant = "allow"

let-underscore-must-use = "warn"
print_stderr = "warn"

pedantic = { level = "warn", priority = -1 }

# TODO some are valid, recheck
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
